--- a/index.html
+++ b/index.html
@@ -99,24 +99,24 @@
     <!-- Timing icons-->
     <div class="container-fluid bg-white">
     <div class="row my-5 mx-5 p-3 text-center">
-        <div class="col-3 col-sm-12 col-md-6">
+        <div class="col-3">
             <img alt="icon1" src="img/fork.png" class="justify-content-start my-3"  height="100px" width="100px">
             <h5 class="fw-bolder">Best Quality Food</h5>
             <p style="color:#7a7a7a;">lorem ipsum amet dolor</p>
         </div>
-        <div class="col-3 col-sm-12 col-md-6">
+        <div class="col-3">
             <img alt="icon2" src="img/time.png" class="justify-content-start my-3"  height="100px" width="100px">
             <h5 class="fw-bolder">Timing</h5>
             <p style="color:#7a7a7a;">Monday - Saturday<br>
             9 AM - 3 PM<br>
             6 PM - 11 PM</p>
         </div>
-        <div class="col-3 col-sm-12 col-md-6">
+        <div class="col-3">
             <img alt="icon3" src="img/hall.png" class="justify-content-start my-3" height="100px" width="100px">
             <h5 class="fw-bolder">Dining Area</h5>
             <p style="color:#7a7a7a;">Large Dining Area With AC</p>
         </div>
-        <div class="col-3 col-sm-12 col-md-6">
+        <div class="col-3">
             <img alt="icon4" src="img/delivery.png" class="justify-content-start my-3"  height="100px" width="100px">
             <h5 class="fw-bolder">Free Home Delivery</h5>
             <p style="color:#7a7a7a;">lorem ipsum amet dolor</p>
@@ -153,7 +153,7 @@
         </div>
         <div class="row m-5">
             <div class="col-md-3">
-                <div class="card" >
+                <div class="card mb-4">
                     <img class="card-img-top p-2" alt="chef1" src="img/chef%201.jpg">
                     <h6 class="card-title mx-2 fw-bold">
                         John Doe
@@ -164,7 +164,7 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card">
+                <div class="card mb-4">
                     <img class="card-img-top p-2" alt="chef2" src="img/chef%202.jpg">
                     <h6 class="card-title mx-2 fw-bold" >
                         John Doe
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="col-md-3 ">
-                <div class="card">
+                <div class="card mb-4">
                     <img class="card-img-top p-2" alt="chef3" src="img/chef%203.jpg">
                     <h6 class="card-title mx-2 fw-bold" >
                         John Doe
@@ -186,7 +186,7 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card">
+                <div class="card mb-4">
                     <img class="card-img-top p-2" alt="chef4" src="img/chef%204.jpg">
                     <h6 class="card-title mx-2 fw-bold">
                         John Doe
